@@ -208,71 +208,50 @@ void find_W ( spec_t rhok, double T, double Te, double Tv, double Estar, double 
   if (REACTION[19])
     add_to_W_2r2p ( specN, specO2,   specO, specNO,    _kf_Arrhenius(2, 1.8e8, 1.5, 3020.0*R, T) , N, W);
 
-  if ( TOWNSEND ) {
-    
-    if (REACTION[20])
-      add_to_W_2r3p ( specN2, speceminus,   specN2plus, speceminus, speceminus,   exp ( -0.0105809 * sqr ( theta ) - 2.40411e-75 * pow ( theta, 46.0 ) ), N, W);
 
-    if (REACTION[21])
-      add_to_W_2r3p ( specO2, speceminus,   specO2plus, speceminus, speceminus,   exp ( -0.0102785 * sqr ( theta ) - 2.42260e-75 * pow ( theta, 46.0 ) ), N, W);
-
-    if (REACTION[22])
-      add_to_W_2r3p ( specNO, speceminus,   specNOplus, speceminus, speceminus,   exp ( -5.9890E-6 * pow ( theta , 4.0 ) + 2.5988E-84 * pow ( theta, 51.0 ) ), N, W);
-
-    if (REACTION[23])
-      add_to_W_2r3p ( specCs, speceminus,   specCsplus, speceminus, speceminus,    _kf_Arrhenius(2, 1.6e32, -3.3, 45172.0*R, Te), N, W);
-  }
-
-  if (REACTION[24])
+  if (REACTION[20])
     add_to_W_2r2p ( speceminus, specNOplus,   specN, specO,    _kf_Arrhenius(2, 2e19, -1.0, 0.0, Te) , N, W);
 
-  if (REACTION[25])
+  if (REACTION[21])
     add_to_W_2r2p ( speceminus, specO2plus,   specO, specO,    2.0e-7*pow(300.0/Te,0.7) , N, W);
 
-  if (REACTION[26])
+  if (REACTION[22])
     add_to_W_2r2p ( speceminus, specN2plus,   specN, specN,    2.8e-7*pow(300.0/Te,0.5) , N, W);
 
-  if (REACTION[27])
-    add_to_W_2r1p ( speceminus, specCsplus,   specCs,   _kf_Arrhenius(2, 7.2e14, -0.67, 0.0, Te)  , N, W);
 
-  if (REACTION[28]){
-    kf=3.0e19/sqr(calA);
-    for (k=0; specM4[k]!=specEND; k++)
-      add_to_W_3r2p ( speceminus, specCsplus, specM4[k],   specCs, specM4[k],  kf  , N, W);
-  }
-
-  if (REACTION[29])
-    add_to_W_3r2p ( speceminus, specCsplus, speceminus,  specCs, speceminus,    _kf_Arrhenius(3, 4e39, -4.5, 0.0, Te) , N, W);
-
-  if (REACTION[30])
+  if (REACTION[23])
     add_to_W_2r1p ( speceminus, specO, specOminus,   7.2e8/calA , N, W);
 
-  if (REACTION[31]){
+  if (REACTION[24]){
     kf=_kf_Arrhenius(3, 8.5e19, -0.5, 0.0, Te);
     for (k=0; specM4[k]!=specEND; k++)
       add_to_W_3r2p ( speceminus, specO, specM4[k],   specOminus, specM4[k],  kf  , N, W);
   }
+
+  if (REACTION[25]){
   
-  if (REACTION[33])
+  }
+     
+  if (REACTION[26])
     add_to_W_3r2p ( specO2, specO2, speceminus,  specO2, specO2minus,   1.4e-29 * 300.0 / Te * exp ( -600.0 / T ) * exp ( 700.0 * ( Te - T ) / Te / T ), N, W);
 
-  if (REACTION[34])
+  if (REACTION[27])
     add_to_W_3r2p ( specO2, specN2, speceminus,  specN2, specO2minus,   1.07e-31 * sqr ( 300.0 / Te ) * exp ( -70.0 / T ) * exp ( 1500.0 * ( Te - T ) / Te / T ), N, W);
 
-  if (REACTION[35]){
+  if (REACTION[28]){
     kf=_kf_Arrhenius(2, 1.4e12, 1.0, 17016.0*R, T);
     for (k=0; specM4[k]!=specEND; k++)
       add_to_W_2r3p ( specOminus, specM4[k],   specO, speceminus, specM4[k],   kf, N, W);
   }
 
-  if (REACTION[36]){
+  if (REACTION[29]){
     kf=2.0e-7 * pow ( 300.0 / T, 0.5 );
     add_to_W_2r2p ( specN2plus, specO2minus,   specO2, specN2,   kf, N, W);
     add_to_W_2r2p ( specO2plus, specO2minus,   specO2, specO2,   kf, N, W);
     add_to_W_2r2p ( specNOplus, specO2minus,   specO2, specNO,   kf, N, W);
   }
   
-  if (REACTION[37]){
+  if (REACTION[30]){
     kf=2.0e-25 * pow ( 300.0 / T, 2.5 );
     for (k=0; specM4[k]!=specEND; k++){
       add_to_W_3r3p ( specM4[k], specN2plus, specO2minus,  specO2, specN2, specM4[k],   kf, N, W);
@@ -281,8 +260,39 @@ void find_W ( spec_t rhok, double T, double Te, double Tv, double Estar, double 
     }
   }
 
-  if (REACTION[38])
+  if (REACTION[31])
     add_to_W_2r3p ( specO2, specO2minus,   specO2, specO2, speceminus,   8.6e-10 * exp ( -6030.0 / T ) * ( 1.0 - exp ( -1570.0 / T ) ), N, W);
+
+  if ( TOWNSEND ) {
+    
+    if (REACTION[32])
+      add_to_W_2r3p ( specN2, speceminus,   specN2plus, speceminus, speceminus,   exp ( -0.0105809 * sqr ( theta ) - 2.40411e-75 * pow ( theta, 46.0 ) ), N, W);
+
+    if (REACTION[33])
+      add_to_W_2r3p ( specO2, speceminus,   specO2plus, speceminus, speceminus,   exp ( -0.0102785 * sqr ( theta ) - 2.42260e-75 * pow ( theta, 46.0 ) ), N, W);
+
+    if (REACTION[34])
+      add_to_W_2r3p ( specNO, speceminus,   specNOplus, speceminus, speceminus,   exp ( -5.9890E-6 * pow ( theta , 4.0 ) + 2.5988E-84 * pow ( theta, 51.0 ) ), N, W);
+
+  }
+
+
+  if (TOWNSEND){
+    if (REACTION[35])
+      add_to_W_2r3p ( specCs, speceminus,   specCsplus, speceminus, speceminus,    _kf_Arrhenius(2, 1.6e32, -3.3, 45172.0*R, Te), N, W);
+  }
+
+  if (REACTION[36])
+    add_to_W_2r1p ( speceminus, specCsplus,   specCs,   _kf_Arrhenius(2, 7.2e14, -0.67, 0.0, Te)  , N, W);
+
+  if (REACTION[37]){
+    kf=3.0e19/sqr(calA);
+    for (k=0; specM4[k]!=specEND; k++)
+      add_to_W_3r2p ( speceminus, specCsplus, specM4[k],   specCs, specM4[k],  kf  , N, W);
+  }
+
+  if (REACTION[38])
+    add_to_W_3r2p ( speceminus, specCsplus, speceminus,  specCs, speceminus,    _kf_Arrhenius(3, 4e39, -4.5, 0.0, Te) , N, W);
 
   if (REACTION[39])
     add_to_W_2r2p ( specCs, specO2,   specCsplus, specO2minus,    _kf_Arrhenius(2, 1e17, 0.07, 39836.0*R, T) , N, W);
@@ -510,47 +520,10 @@ void find_dW_dx ( spec_t rhok, spec_t mu, double T, double Te, double Tv, double
   }
 
     
-  if ( TOWNSEND && TOWNSEND_IMPLICIT ) {
 
-    if (REACTION[20]) {
-      kf=exp ( -0.0105809 * sqr ( theta ) - 2.40411e-75 * pow ( theta, 46.0 ) );
-      dkfdTe = 0.0;
-      dkfdT=0.0;
-      dkfdTv=0.0;
-      add_to_dW_2r3p ( specN2, speceminus,   specN2plus, speceminus, speceminus,   kf, N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
-    }
-  
-    if (REACTION[21]) {
-      kf=exp ( -0.0102785 * sqr ( theta ) - 2.42260e-75 * pow ( theta, 46.0 ) );
-      dkfdTe = 0.0;
-      dkfdT=0.0;
-      dkfdTv=0.0;
-      add_to_dW_2r3p ( specO2, speceminus,   specO2plus, speceminus, speceminus,   kf, N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
-    }
-
-    if (REACTION[22]){
-      kf=exp ( -5.9890E-6 * pow ( theta , 4.0 ) + 2.5988E-84 * pow ( theta, 51.0 ) );
-      dkfdTe = 0.0;
-      dkfdT=0.0;
-      dkfdTv=0.0;
-      add_to_dW_2r3p ( specNO, speceminus,   specNOplus, speceminus, speceminus,   kf, N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
-    }
-
-
-  }
-
-  if (TOWNSEND){
-    if (REACTION[23]){
-      kf=_kf_Arrhenius(2, 1.6e32, -3.3, 45172.0*R, Te);
-      dkfdTe = _dkfdT_Arrhenius(2, 1.6e32, -3.3, 45172.0*R, Te);
-      dkfdT=0.0;
-      dkfdTv=0.0;      
-      add_to_dW_2r3p ( specCs, speceminus,   specCsplus, speceminus, speceminus,    kf, N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
-    }
-  }
   
 
-  if (REACTION[24]){
+  if (REACTION[20]){
     kf=_kf_Arrhenius(2, 2e19, -1.0, 0.0, Te);
     dkfdTe=_dkfdT_Arrhenius(2, 2e19, -1.0, 0.0, Te);
     dkfdT=0.0;
@@ -558,7 +531,7 @@ void find_dW_dx ( spec_t rhok, spec_t mu, double T, double Te, double Tv, double
     add_to_dW_2r2p ( speceminus, specNOplus,   specN, specO,    kf , N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
   }
 
-  if (REACTION[25]){
+  if (REACTION[21]){
     kf=2.0e-7*pow(300.0/Te,0.7);
     dkfdTe=-0.7*2.0e-7*pow(300.0,0.7)*pow(Te,-1.7);
     dkfdT=0.0;
@@ -566,7 +539,7 @@ void find_dW_dx ( spec_t rhok, spec_t mu, double T, double Te, double Tv, double
     add_to_dW_2r2p ( speceminus, specO2plus,   specO, specO,    kf , N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
   }
 
-  if (REACTION[26]){
+  if (REACTION[22]){
     kf=2.8e-7*pow(300.0/Te,0.5);
     dkfdTe=-0.5*2.8e-7*pow(300.0,0.5)*pow(Te,-1.5);
     dkfdT=0.0;
@@ -574,32 +547,8 @@ void find_dW_dx ( spec_t rhok, spec_t mu, double T, double Te, double Tv, double
     add_to_dW_2r2p ( speceminus, specN2plus,   specN, specN,    kf , N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
   }
 
-  if (REACTION[27]){
-    kf=_kf_Arrhenius(2, 7.2e14, -0.67, 0.0, Te);
-    dkfdTe=_dkfdT_Arrhenius(2, 7.2e14, -0.67, 0.0, Te);
-    dkfdT=0.0;
-    dkfdTv=0.0;      
-    add_to_dW_2r1p ( speceminus, specCsplus,   specCs,   kf  , N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
-  }
 
-  if (REACTION[28]){
-    kf=3.0e19/sqr(calA);
-    dkfdT=0.0;
-    dkfdTv=0.0;      
-    dkfdTe=0.0;
-    for (k=0; specM4[k]!=specEND; k++)
-      add_to_dW_3r2p ( speceminus, specCsplus, specM4[k],   specCs, specM4[k],  kf, N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
-  }
-
-  if (REACTION[29]){
-    kf=_kf_Arrhenius(3, 4e39, -4.5, 0.0, Te);
-    dkfdTe=_dkfdT_Arrhenius(3, 4e39, -4.5, 0.0, Te);
-    dkfdT=0.0;
-    dkfdTv=0.0;      
-    add_to_dW_3r2p ( speceminus, specCsplus, speceminus,  specCs, speceminus,    kf , N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
-  }
-
-  if (REACTION[30]){
+  if (REACTION[23]){
     kf=7.2e8/calA;
     dkfdT=0.0;
     dkfdTv=0.0;
@@ -607,7 +556,7 @@ void find_dW_dx ( spec_t rhok, spec_t mu, double T, double Te, double Tv, double
     add_to_dW_2r1p ( speceminus, specO, specOminus,   kf , N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
   }
 
-  if (REACTION[31]){
+  if (REACTION[24]){
     kf=_kf_Arrhenius(3, 8.5e19, -0.5, 0.0, Te);
     dkfdT=0.0;
     dkfdTv=0.0;
@@ -616,8 +565,11 @@ void find_dW_dx ( spec_t rhok, spec_t mu, double T, double Te, double Tv, double
       add_to_dW_3r2p ( speceminus, specO, specM4[k],   specOminus, specM4[k],  kf  , N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
   }
 
+  if (REACTION[25]){
+  
+  }
 
-  if (REACTION[33]) {
+  if (REACTION[26]) {
     kf=1.4e-29 * 300.0 / Te * exp ( -600.0 / T ) * exp ( 700.0 * ( Te - T ) / Te / T );
     dkfdTe = ( -1.0 / Te + 700.0 / sqr ( Te ) ) * kf;
     dkfdT = ( 600.0 / sqr ( T ) - 700.0 / Te / T - 700.0 * ( Te - T ) / Te / sqr ( T ) ) * kf;
@@ -625,7 +577,7 @@ void find_dW_dx ( spec_t rhok, spec_t mu, double T, double Te, double Tv, double
     add_to_dW_3r2p ( specO2, specO2, speceminus,  specO2, specO2minus,   kf, N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
   }
     
-  if (REACTION[34]) {
+  if (REACTION[27]) {
     kf = 1.07e-31 * sqr ( 300.0 / Te ) * exp ( -70.0 / T ) * exp ( 1500.0 * ( Te - T ) / Te / T );
     dkfdTe = ( -2.0 / Te + 1500.0 / sqr ( Te ) ) * kf;
     dkfdT = ( 70.0 / sqr ( T ) - 1500.0 / sqr ( T ) ) * kf;
@@ -633,7 +585,7 @@ void find_dW_dx ( spec_t rhok, spec_t mu, double T, double Te, double Tv, double
     add_to_dW_3r2p ( specO2, specN2, speceminus,  specN2, specO2minus,   kf, N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
   }
 
-  if (REACTION[35]){
+  if (REACTION[28]){
     kf=_kf_Arrhenius(2, 1.4e12, 1.0, 17016.0*R, T);
     dkfdT=_dkfdT_Arrhenius(2, 1.4e12, 1.0, 17016.0*R, T);
     dkfdTv=0.0;
@@ -643,7 +595,7 @@ void find_dW_dx ( spec_t rhok, spec_t mu, double T, double Te, double Tv, double
   }
 
 
-  if (REACTION[36]) {
+  if (REACTION[29]) {
     kf=2.0e-7 * pow ( 300.0 / T, 0.5 );
     dkfdTe = 0.0;
     dkfdT = -0.5 * 2.0e-7 * pow ( T / 300.0, -1.5 ) / 300.0 ;
@@ -653,7 +605,7 @@ void find_dW_dx ( spec_t rhok, spec_t mu, double T, double Te, double Tv, double
     add_to_dW_2r2p ( specNOplus, specO2minus,   specO2, specNO,   kf, N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
   }
   
-  if (REACTION[37]) {
+  if (REACTION[30]) {
     kf=2.0e-25 * pow ( 300.0 / T, 2.5 );
     dkfdTe = 0.0;
     dkfdT = -2.5 * kf / T ;
@@ -665,13 +617,79 @@ void find_dW_dx ( spec_t rhok, spec_t mu, double T, double Te, double Tv, double
     }
   }
 
-  if (REACTION[38]) {
+  if (REACTION[31]) {
     kf = 8.6e-10 * exp ( -6030.0 / T ) * ( 1.0 - exp ( -1570.0 / T ) );
     dkfdTe = 0.0;
     dkfdT =kf * 6030.0 / sqr ( T ) - 8.6e-10 * exp ( -6030.0 / T ) * exp ( -1570.0 / T ) * 1570.0 / sqr ( T );
     dkfdTv=0.0;
     add_to_dW_2r3p ( specO2, specO2minus,   specO2, specO2, speceminus,   kf, N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
   }
+
+
+  if ( TOWNSEND && TOWNSEND_IMPLICIT ) {
+
+    if (REACTION[32]) {
+      kf=exp ( -0.0105809 * sqr ( theta ) - 2.40411e-75 * pow ( theta, 46.0 ) );
+      dkfdTe = 0.0;
+      dkfdT=0.0;
+      dkfdTv=0.0;
+      add_to_dW_2r3p ( specN2, speceminus,   specN2plus, speceminus, speceminus,   kf, N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
+    }
+  
+    if (REACTION[33]) {
+      kf=exp ( -0.0102785 * sqr ( theta ) - 2.42260e-75 * pow ( theta, 46.0 ) );
+      dkfdTe = 0.0;
+      dkfdT=0.0;
+      dkfdTv=0.0;
+      add_to_dW_2r3p ( specO2, speceminus,   specO2plus, speceminus, speceminus,   kf, N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
+    }
+
+    if (REACTION[34]){
+      kf=exp ( -5.9890E-6 * pow ( theta , 4.0 ) + 2.5988E-84 * pow ( theta, 51.0 ) );
+      dkfdTe = 0.0;
+      dkfdT=0.0;
+      dkfdTv=0.0;
+      add_to_dW_2r3p ( specNO, speceminus,   specNOplus, speceminus, speceminus,   kf, N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
+    }
+
+  }
+
+
+  if (TOWNSEND){
+    if (REACTION[35]){
+      kf=_kf_Arrhenius(2, 1.6e32, -3.3, 45172.0*R, Te);
+      dkfdTe = _dkfdT_Arrhenius(2, 1.6e32, -3.3, 45172.0*R, Te);
+      dkfdT=0.0;
+      dkfdTv=0.0;      
+      add_to_dW_2r3p ( specCs, speceminus,   specCsplus, speceminus, speceminus,    kf, N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
+    }
+  }
+
+  if (REACTION[36]){
+    kf=_kf_Arrhenius(2, 7.2e14, -0.67, 0.0, Te);
+    dkfdTe=_dkfdT_Arrhenius(2, 7.2e14, -0.67, 0.0, Te);
+    dkfdT=0.0;
+    dkfdTv=0.0;      
+    add_to_dW_2r1p ( speceminus, specCsplus,   specCs,   kf  , N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
+  }
+
+  if (REACTION[37]){
+    kf=3.0e19/sqr(calA);
+    dkfdT=0.0;
+    dkfdTv=0.0;      
+    dkfdTe=0.0;
+    for (k=0; specM4[k]!=specEND; k++)
+      add_to_dW_3r2p ( speceminus, specCsplus, specM4[k],   specCs, specM4[k],  kf, N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
+  }
+
+  if (REACTION[38]){
+    kf=_kf_Arrhenius(3, 4e39, -4.5, 0.0, Te);
+    dkfdTe=_dkfdT_Arrhenius(3, 4e39, -4.5, 0.0, Te);
+    dkfdT=0.0;
+    dkfdTv=0.0;      
+    add_to_dW_3r2p ( speceminus, specCsplus, speceminus,  specCs, speceminus,    kf , N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe);
+  }
+
 
   if (REACTION[39]){
     kf=_kf_Arrhenius(2, 1e17, 0.07, 39836.0*R, T);
