@@ -175,70 +175,70 @@ abstract
     19  & $\rm N+O_2 \rightarrow O + NO $ 
        &  $1.8\cdot 10^{8} \cdot {\cal A}^{-1} \cdot T^{1.5} \exp(-3020/T)$~cm$^3$/s
        & \cite{misc:1964:lenard} \\
-    20  & $\rm e^- + N_2   \rightarrow N_2^+ + e^- + e^-$  
-       &  ${\rm exp}(-0.0105809\cdot {\rm ln}^2 E^\star - 2.40411\cdot 10^{-75} \cdot {\rm ln}^{46}E^\star)$~cm$^3$/s
-       & \cite{jcp:2014:parent} \\
-    21  & $\rm e^- + O_2   \rightarrow O_2^+ + e^- + e^-$  
-       &  ${\rm exp}(-0.0102785\cdot {\rm ln}^2 E^\star - 2.42260\cdot 10^{-75} \cdot {\rm ln}^{46}E^\star)$~cm$^3$/s
-       & \cite{jcp:2014:parent} \\
-    22  & $\rm e^- + NO   \rightarrow NO^+ + e^- + e^-$  
-       &  ${\rm exp}(-5.9890\cdot 10^{-6} \cdot {\rm ln}^4 E^\star + 2.5988\cdot 10^{-84} \cdot {\rm ln}^{51}E^\star)$~cm$^3$/s
-       & BOLSIG+ \\
-    23  & $\rm  e^- + Cs  \rightarrow Cs^+ + e^- + e^-$  
-       &  $1.6\cdot 10^{32} \cdot {\cal A}^{-1} \cdot T_{\rm e}^{-3.3} \cdot \exp(-45172/T_{\rm e})$~cm$^3$/s
-       & \cite{misc:1964:lenard} \\
-    24  & $\rm  e^- + NO^+  \rightarrow N + O$ 
+    20  & $\rm  e^- + NO^+  \rightarrow N + O$ 
        &  $2\cdot 10^{19} \cdot {\cal A}^{-1} \cdot T_{\rm e}^{-1} $~cm$^3$/s
        & \cite{misc:1964:lenard} \\
-    25 & $\rm e^- + O_2^+ \rightarrow O + O$  
+    21 & $\rm e^- + O_2^+ \rightarrow O + O$  
        & $2.0 \cdot 10^{-7} \cdot (300/T_{\rm e})^{0.7}  $ cm$^3$/s
        & \cite{misc:1997:aleksandrov}\\
-    26 & $\rm e^- + N_2^+ \rightarrow N + N$  
+    22 & $\rm e^- + N_2^+ \rightarrow N + N$  
        & $2.8 \cdot 10^{-7} \cdot (300/T_{\rm e})^{0.5}  $ cm$^3$/s 
        & \cite{misc:1992:kossyi}\\
-    27  & $\rm  e^- + Cs^+   \rightarrow Cs + h_v$  
-       &  $7.2\cdot 10^{14} \cdot {\cal A}^{-1} \cdot T_{\rm e}^{-0.67}$~cm$^3$/s
-       & \cite{misc:1964:lenard} \\
-    28  & $\rm  e^- + Cs^+  + M_4 \rightarrow Cs + M_4$  
-       &  $3.0\cdot 10^{19} \cdot {\cal A}^{-2} $~cm$^6$/s
-       & \cite{misc:1964:lenard} \\
-    29  & $\rm  e^- + Cs^+  + e^- \rightarrow Cs + e^-$  
-       &  $4.0\cdot 10^{39} \cdot {\cal A}^{-2} \cdot T_{\rm e}^{-4.5} $~cm$^6$/s
-       & \cite{misc:1964:lenard} \\
-    30  & $\rm e^- + O   \rightarrow O^- + h_v$ 
+    23  & $\rm e^- + O   \rightarrow O^- + h_v$ 
        &  $7.2\cdot 10^{8}\cdot {\cal A}^{-1}$~cm$^3$/s
        & \cite{misc:1964:lenard} \\
-    31  & $\rm e^- + O  + M_4  \rightarrow O^- + M_4$  
+    24  & $\rm e^- + O  + M_4  \rightarrow O^- + M_4$  
        &  $8.5\cdot 10^{19}\cdot {\cal A}^{-2}\cdot T_{\rm e}^{-0.5}$~cm$^6$/s
        & \cite{misc:1964:lenard} \\
-    32 & $\rm e^- + O_2 +M_5 \rightarrow O_2^- + M_5$  
+    25 & $\rm e^- + O_2 +M_5 \rightarrow O_2^- + M_5$  
        &  ?
        &  BOLSIG+\\
-    33 & $\rm e^- + O_2 +O_2 \rightarrow O_2^- + O_2$  
+    26 & $\rm e^- + O_2 +O_2 \rightarrow O_2^- + O_2$  
        &  $1.4 \cdot 10^{-29} \cdot \left( {300}/{T_{\rm e}}\right)\cdot  \exp \left( {-600}/{T}\right)$
        & \cite{misc:1992:kossyi}\\
     ~  &   
        & ~~~$\cdot \exp \left( {700 \cdot (T_{\rm e}-T)}/{(T_{\rm e} T)}  \right)$ cm$^6$/s
        & ~\\
-    34 & $\rm e^- + O_2 + N_2 \rightarrow O_2^- + N_2$  
+    27 & $\rm e^- + O_2 + N_2 \rightarrow O_2^- + N_2$  
        & $1.07 \cdot 10^{-31} \cdot \left( {300}/{T_{\rm e}} \right)^2 \cdot \exp \left( {-70}/{T}\right)$          
        & \cite{misc:1992:kossyi}\\
     ~  &   
        & ~~~$\cdot \exp \left( {1500 \cdot (T_{\rm e}-T)}/({T_{\rm e} T})  \right)$ cm$^6$/s 
        & ~\\
-    35  & $\rm  O^- + M_4 \rightarrow O + e^- + M_4$  
+    28  & $\rm  O^- + M_4 \rightarrow O + e^- + M_4$  
        &  $1.4\cdot 10^{12} \cdot {\cal A}^{-1} \cdot T \cdot \exp(-17016/T)$~cm$^3$/s
        & \cite{misc:1964:lenard} \\
-    36 & $\rm O_2^{-} + M_6^{+} \rightarrow O_2 + M_6$ 
+    29 & $\rm O_2^{-} + M_6^{+} \rightarrow O_2 + M_6$ 
        & $2.0 \cdot 10^{-7} \cdot (300/T)^{0.5}$ cm$^3$/s
        & \cite{misc:1992:kossyi}\\
-    37 & $\rm O_2^{-} + M_6^{+} + M_4\rightarrow O_2 + M_6 +M_4$ 
+    30 & $\rm O_2^{-} + M_6^{+} + M_4\rightarrow O_2 + M_6 +M_4$ 
        & $2.0 \cdot 10^{-25} \cdot (300/T)^{2.5}$ cm$^6$/s  
        & \cite{misc:1992:kossyi}\\
-    38  & $\rm O_2^- + O_2 \rightarrow e^- + O_2 + O_2$  
+    31  & $\rm O_2^- + O_2 \rightarrow e^- + O_2 + O_2$  
        & $8.6 \cdot 10^{-10} \cdot \exp \left( {-6030}/{T}\right)
                \left(1-\exp \left( {-1570}/{T} \right)  \right)$ cm$^3$/s
        & \cite{book:1997:bazelyan}, Ch.\ 2\\
+    32  & $\rm e^- + N_2   \rightarrow N_2^+ + e^- + e^-$  
+       &  ${\rm exp}(-0.0105809\cdot {\rm ln}^2 E^\star - 2.40411\cdot 10^{-75} \cdot {\rm ln}^{46}E^\star)$~cm$^3$/s
+       & \cite{jcp:2014:parent} \\
+    33  & $\rm e^- + O_2   \rightarrow O_2^+ + e^- + e^-$  
+       &  ${\rm exp}(-0.0102785\cdot {\rm ln}^2 E^\star - 2.42260\cdot 10^{-75} \cdot {\rm ln}^{46}E^\star)$~cm$^3$/s
+       & \cite{jcp:2014:parent} \\
+    34  & $\rm e^- + NO   \rightarrow NO^+ + e^- + e^-$  
+       &  ${\rm exp}(-5.9890\cdot 10^{-6} \cdot {\rm ln}^4 E^\star + 2.5988\cdot 10^{-84} \cdot {\rm ln}^{51}E^\star)$~cm$^3$/s
+       & BOLSIG+ \\
+    35  & $\rm  e^- + Cs  \rightarrow Cs^+ + e^- + e^-$  
+       &  $1.6\cdot 10^{32} \cdot {\cal A}^{-1} \cdot T_{\rm e}^{-3.3} \cdot \exp(-45172/T_{\rm e})$~cm$^3$/s
+       & \cite{misc:1964:lenard} \\
+    36  & $\rm  e^- + Cs^+   \rightarrow Cs + h_v$  
+       &  $7.2\cdot 10^{14} \cdot {\cal A}^{-1} \cdot T_{\rm e}^{-0.67}$~cm$^3$/s
+       & \cite{misc:1964:lenard} \\
+    37  & $\rm  e^- + Cs^+  + M_4 \rightarrow Cs + M_4$  
+       &  $3.0\cdot 10^{19} \cdot {\cal A}^{-2} $~cm$^6$/s
+       & \cite{misc:1964:lenard} \\
+    38  & $\rm  e^- + Cs^+  + e^- \rightarrow Cs + e^-$  
+       &  $4.0\cdot 10^{39} \cdot {\cal A}^{-2} \cdot T_{\rm e}^{-4.5} $~cm$^6$/s
+       & \cite{misc:1964:lenard} \\
     39  & $\rm  Cs + O_2 \rightarrow Cs^+ + O_2^-$  
        &  $1.0\cdot 10^{17} \cdot {\cal A}^{-1} \cdot T^{0.07} \cdot \exp(-39836/T)$~cm$^3$/s
        & \cite{misc:1964:lenard} \\
